@@ -3,7 +3,6 @@
  - add optimisation flags -O2 to configure
  - remember snmp community on per host level
  - net.if.stat collected as double, must be as uint64
- - rename screens_items.resource -> resourcetype
 
  - item key popup, trigger expression builder
  - remember different default values in different forms
