@@ -44,3 +44,6 @@ update screens set vsize=rows;
 alter table screens drop cols;
 alter table screens drop rows;
 
+alter table screens_items add resourcetype	int4	DEFAULT '0' NOT NULL;
+update screens_items set resourcetype=resource;
+alter table screens_items drop resource;
