@@ -1,5 +1,6 @@
 Changes for 1.1beta10:
 
+ - renamed screens_items.resource -> resourcetype (Alexei)
  - renamed screens.rows ->vsize, cols -> hsize (Alexei)
  - renamed audit.resource -> resourcetype (Alexei)
  - fixed evaluation of max,min,count,sum for item having integer values (Alexei)
